[gd_scene load_steps=30 format=2]

[ext_resource path="res://RattoBoxTitlebut3d.png" type="Texture" id=1]
[ext_resource path="res://sprites/coolgradient.png" type="Texture" id=2]
[ext_resource path="res://sprites/options.png" type="Texture" id=3]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://scenes/UIs/MapSelection.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/optionssel.png" type="Texture" id=6]
[ext_resource path="res://sprites/1 rat.jpg" type="Texture" id=7]
[ext_resource path="res://sounds/ost/mainmenu.mp3" type="AudioStream" id=8]
[ext_resource path="res://sounds/select.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/y2mate.com - Rat Sounds Effect.mp3" type="AudioStream" id=10]
[ext_resource path="res://sprites/multiplayer.png" type="Texture" id=11]
[ext_resource path="res://scenes/UIs/Options.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/play.png" type="Texture" id=13]
[ext_resource path="res://sprites/playsel.png" type="Texture" id=14]
[ext_resource path="res://LoadingScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://sprites/multiplayerhover.png" type="Texture" id=16]
[ext_resource path="res://LinkText.tres" type="DynamicFont" id=17]
[ext_resource path="res://sprites/ModsSelected.png" type="Texture" id=18]
[ext_resource path="res://sprites/Mods.png" type="Texture" id=19]
[ext_resource path="res://scenes/UIs/ModMenu.tscn" type="PackedScene" id=20]
[ext_resource path="res://sounds/hover.wav" type="AudioStream" id=21]
[ext_resource path="res://scenes/UIs/Credits.tscn" type="PackedScene" id=22]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("spri1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 577, 297 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spri1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.309804, 0.309804, 0.309804, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spri2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("spri2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.309804, 0.309804, 0.309804, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "menu"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spri1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 577, 297 ), Vector2( 447, 297 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spri1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8.7, 10.5, 19.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.309804, 0.309804, 0.309804, 1 ), Color( 0.309804, 0.309804, 0.309804, 1 ), Color( 0.309804, 0.309804, 0.309804, 0 ), Color( 0.309804, 0.309804, 0.309804, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spri2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 7.6, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 282, 307 ), Vector2( 714, 299 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("spri2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 8.7, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.309804, 0.309804, 0.309804, 0 ), Color( 0.309804, 0.309804, 0.309804, 0 ), Color( 0.309804, 0.309804, 0.309804, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ Vector2( -239, -23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 484, 133 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Title"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.6, 0.6 ),
"update": 0,
"values": [ Vector2( -90, 0 ), Vector2( -120, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow/Title:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ 0.548136, -0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ 0.5, -0.5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "TitleNew"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Shadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 484, 131 ), Vector2( 484, 117 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Enter"
tracks/0/type = "value"
tracks/0/path = NodePath("Colour:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Background" type="TextureRect" parent="."]
visible = false
margin_left = -140.0
margin_top = -195.0
margin_right = 1322.0
margin_bottom = 732.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -20.8

[node name="MainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -14.0
autoplay = true

[node name="rat squeaking" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.8

[node name="bg" type="CanvasLayer" parent="."]
layer = -1

[node name="spri1" type="Sprite" parent="bg"]
modulate = Color( 0.309804, 0.309804, 0.309804, 1 )
position = Vector2( 577, 297 )
scale = Vector2( 1.14355, 1.02076 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="spri2" type="Sprite" parent="bg"]
modulate = Color( 0.309804, 0.309804, 0.309804, 0 )
scale = Vector2( 1.43604, 1.43272 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="bg"]
autoplay = "menu"
anims/RESET = SubResource( 1 )
anims/menu = SubResource( 2 )

[node name="DevNote" type="Label" parent="bg"]
visible = false
modulate = Color( 1, 1, 1, 0.341176 )
margin_left = 6.0
margin_top = 580.0
margin_right = 877.0
margin_bottom = 594.0
text = "(Developer version, This was your choice.)"

[node name="Main" type="Node2D" parent="."]

[node name="TitleReal" type="Node2D" parent="Main"]
position = Vector2( -187, 16 )

[node name="Shadow" type="Sprite" parent="Main/TitleReal"]
self_modulate = Color( 0, 0, 0, 0 )
position = Vector2( 484, 133 )
scale = Vector2( 1.9, 1.9 )
texture = ExtResource( 1 )

[node name="Title" type="Sprite" parent="Main/TitleReal/Shadow"]
position = Vector2( -1, -2.532 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main/TitleReal"]
autoplay = "TitleNew"
anims/RESET = SubResource( 3 )
anims/Title = SubResource( 4 )
anims/TitleNew = SubResource( 7 )

[node name="versionnum" type="Label" parent="Main"]
modulate = Color( 1, 1, 1, 0.341176 )
margin_left = 5.0
margin_top = 576.0
margin_right = 787.0
margin_bottom = 606.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 17 )
text = "kill yourself"
valign = 1

[node name="play" type="TextureButton" parent="Main"]
margin_left = 89.2676
margin_top = 334.12
margin_right = 249.268
margin_bottom = 379.12
rect_scale = Vector2( 1.7, 1.7 )
rect_pivot_offset = Vector2( 79.8838, 21.5996 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 14 )
expand = true

[node name="options" type="TextureButton" parent="Main"]
margin_left = 124.868
margin_top = 418.02
margin_right = 386.868
margin_bottom = 463.02
rect_scale = Vector2( 1.7, 1.7 )
rect_pivot_offset = Vector2( 131.239, 21.7341 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 6 )
expand = true

[node name="mods" type="TextureButton" parent="Main"]
visible = false
margin_left = 22.0
margin_top = 440.0
margin_right = 179.0
margin_bottom = 481.0
rect_scale = Vector2( 1.5, 1.5 )
focus_mode = 0
shortcut_in_tooltip = false
enabled_focus_mode = 0
texture_normal = ExtResource( 19 )
texture_hover = ExtResource( 18 )

[node name="multiplayer" type="TextureButton" parent="Main"]
margin_left = -1296.0
margin_top = 667.0
margin_right = -685.0
margin_bottom = 726.0
disabled = true
enabled_focus_mode = 0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 16 )
expand = true

[node name="Label" type="Label" parent="Main/multiplayer"]
margin_left = -6.0
margin_top = -19.0
margin_right = 783.0
margin_bottom = -5.0
text = "if this is a person looking at the source code, multiplayer is coming but not rn as i got no clue what the fuck a port foward is"

[node name="Credits" type="LinkButton" parent="Main"]
margin_left = 912.0
margin_top = 569.0
margin_right = 1018.0
margin_bottom = 599.0
custom_colors/font_color = Color( 0.615686, 0.901961, 1, 1 )
custom_fonts/font = ExtResource( 17 )
enabled_focus_mode = 0
text = "credits"

[node name="Youtube" type="LinkButton" parent="Main"]
visible = false
margin_left = 791.0
margin_top = 565.0
margin_right = 903.0
margin_bottom = 595.0
custom_colors/font_color = Color( 1, 0.517647, 0.517647, 1 )
custom_fonts/font = ExtResource( 17 )
enabled_focus_mode = 0
text = "youtube"

[node name="Discord" type="LinkButton" parent="Main"]
margin_left = 912.0
margin_top = 544.0
margin_right = 1018.0
margin_bottom = 574.0
custom_colors/font_color = Color( 0.560784, 0.694118, 1, 1 )
custom_fonts/font = ExtResource( 17 )
enabled_focus_mode = 0
text = "discord"

[node name="omglogoreal" type="Sprite" parent="Main"]

[node name="Options" parent="." instance=ExtResource( 12 )]
position = Vector2( -3, 601 )

[node name="MapSelection" parent="." instance=ExtResource( 5 )]
position = Vector2( 5, -602 )

[node name="ModMenu" parent="." instance=ExtResource( 20 )]
position = Vector2( 1102, 5 )

[node name="Credits" parent="." instance=ExtResource( 22 )]
position = Vector2( -989, -593 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
smoothing_enabled = true

[node name="LoadingScreen" parent="Camera2D" instance=ExtResource( 15 )]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="Enter (SLIDE THING TO FIX)" type="AnimationPlayer" parent="."]
autoplay = "Enter"
anims/Enter = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Colour" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -997.0
margin_top = -920.0
margin_right = 2050.0
margin_bottom = 1438.0
mouse_filter = 2
color = Color( 0.168627, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="button_up" from="Main/play" to="." method="_on_play_button_up"]
[connection signal="mouse_entered" from="Main/play" to="." method="_on_play_mouse_entered"]
[connection signal="mouse_exited" from="Main/play" to="." method="_on_mouse_exited"]
[connection signal="button_up" from="Main/options" to="." method="_on_options_button_up"]
[connection signal="mouse_entered" from="Main/options" to="." method="_on_options_mouse_entered"]
[connection signal="mouse_exited" from="Main/options" to="." method="_on_mouse_exited"]
[connection signal="button_up" from="Main/mods" to="." method="_on_mods_button_up"]
[connection signal="button_up" from="Main/Credits" to="." method="_on_Twitter_button_up"]
[connection signal="button_up" from="Main/Youtube" to="." method="_on_Youtube_button_up"]
[connection signal="button_up" from="Main/Discord" to="." method="_on_LinkButton_button_up"]
[connection signal="toggle_mm_song" from="Options" to="." method="_on_Options_toggle_mm_song"]
